feat: 데이터베이스 및 테스트 종속성 추가
MySQL 데이터베이스 연결을 위한 JDBC 종속성과 테스트 환경 구축을 위한 `spring-boot-starter-test` 및 h2 데이터베이스 종속성을 `build.gradle` 파일에 추가했습니다.

--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,24 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'io.github.cdimascio:dotenv-java:2.3.0'
+
+	//mysql
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	//dotenv
+	implementation 'me.paulschwarz:spring-dotenv:3.0.0'
 }
 
 tasks.named('test') {
